--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11163,10 +11163,16 @@ textarea.form-control-lg {
   gap: 20px;
   margin-bottom: 40px;
 }
-.hero__card__box {
+.hero__card {
   background-color: #fff;
   margin-bottom: 20px;
   padding: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.hero__card__image {
+  width: 50px;
 }
 .hero__card__title {
   color: #252B42;
@@ -11181,6 +11187,9 @@ textarea.form-control-lg {
 .hero__card--invert {
   background-color: #00A0C1;
   padding: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 .hero__card--invert__title {
   color: #fff;
